# mlops-zoomcamp

./: hw1.ipynb  pyproject.toml
hw2/: hpo.py  register_model.py  start_mlflow.sh  train.py
hw3/: docker-compose.yml  mlflow.dockerfile
hw3/mlops/homework_03/data_exporters/: summer_willow.py
hw3/mlops/homework_03/data_loaders/: vivid_explorer.py
hw3/mlops/homework_03/pipelines/pipeline1/: metadata.yaml
hw3/mlops/homework_03/transformers/: crimson_sea.py  gracious_myth.py  luminous_crafter.py
hw3/mlops_data/: metadata.yaml
hw3/mlops_data/homework_03/data_loaders/: vivid_explorer.py
hw3/mlops_data/homework_03/pipelines/pipeline1/: metadata.yaml
hw3/mlops_data/homework_03/transformers/: luminous_crafter.py
hw4/: .Pipfile.lock.swp  Dockerfile  MLOps Zoomcamp Starter.ipynb  Pipfile  script.py
hw5/: baseline_model_nyc_taxi_data.ipynb
hw6/: batch.py  docker-compose.yaml  integration_test.py  prepare_integration_tests.sh  q6_read_parquet.py  setup_env_vars.sh
hw6/tests/: test_batch.py
