[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <aburtsev@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
